# vkrm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  all.txt  create_test_ply.py  device_radix_sort.cuh  dispatch_radix_sort.cuh  morton_sort_ply.py  ply_model_helper.py  renderdoc_settings.cap  test  transform.txt
results/: all_fps.csv  bicycle.txt  bonsai.txt  counter.txt  flowers.txt  garden.txt  kitchen.txt  room.txt  stump.txt  treehill.txt
scripts/: download_n_benchmark.sh
src/: App.cpp  BenchmarkApp.cpp  Camera.hpp  Circumsphere.cs.slang  ColmapUtils.h  Culling.cs.slang  DelaunayTetRenderer.3d.slang  DelaunayTetRenderer.cpp  DelaunayTetRenderer.hpp  EvaluateSH.cs.slang  EvaluteSH.cs.slang  EvaluteVertexSH.cs.slang  GenSpheres.cs.slang  GenTriangles.cs.slang  InvertAlpha.cs.slang  RenderContext.hpp  SortUtils.h  SortUtils.slang  StablePower.slang  TetCull.cs.slang  TetSort.cs.slang  TetrahedronScene.slang  safe-math.slang
src/Gizmos/: LagragianMove.hpp  PBDMove.hpp  VertexHighlight.slang  VertexSelection.hpp
src/Renderers/: BillboardRenderer.3d.slang  BillboardRenderer.hpp  CentroidRenderer.3d.slang  CentroidRenderer.hpp  InstancedRenderer.3d.slang  InstancedRenderer.hpp  MeshShaderRenderer.3d.slang  MeshShaderRenderer.hpp  OverlapRenderer.hpp  OverlapRenderer.slang  PointCloudRenderer.3d.slang  PointCloudRenderer.hpp  PreTransform.cs.slang  RasterRenderer.3d.slang  RasterRenderer.hpp  TetFaceRenderer.3d.slang  TetFaceRenderer.hpp
src/Scene/: Camera.hpp  CompressColors.cs.slang  Compression.cs.slang  GenSpheres.cs.slang  TetrahedronScene.cpp  TetrahedronScene.hpp  TetrahedronScene.slang
